--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,8 +29,8 @@
   <body>
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Binary Upload Boom</a></h1>
-        <span>The #100Devs Social Network</span>
+        <h1 class="btn btn-primary rounded-full"><a href="/profile">open Source Recipe</a></h1>
+        <span>The #100Devs Food Network</span>
       </div>
     </header>
   </body>
