--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>openSourceRecipe</title>
+    <title>Chef's Kiss - openSourceRecipe</title>
     <link
       rel="icon"
       type="image/png"
@@ -28,9 +28,44 @@
   </head>
   <body>
     <header class="container">
-      <div class="text-center">
-        <h1 class="btn btn-primary rounded-full"><a href="/profile">open Source Recipe</a></h1>
-        <span>The #100Devs Food Network</span>
+      <!-- NAVBAR -->
+      <div class="flex">
+        <div class="navbar bg-base-100 shadow-lg m-4 rounded-full">
+          <div class="flex-1">
+            <a href="/profile" class="btn btn-ghost normal-case text-xl"
+              >Chef's Kiss</a
+            >
+          </div>
+          <div class="flex-none gap-2">
+            <div class="form-control border-none">
+              <input
+                type="text"
+                placeholder="Search"
+                class="input input-bordered rounded-full"
+              />
+            </div>
+            <div class="dropdown dropdown-end">
+              <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+                <div class="w-10 rounded-full">
+                  <img src="https://placeimg.com/80/80/people" />
+                </div>
+              </label>
+              <ul
+                tabindex="0"
+                class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52"
+              >
+                <li>
+                  <a class="justify-between">
+                    Profile
+                    <span class="badge">New</span>
+                  </a>
+                </li>
+                <li><a>Settings</a></li>
+                <li><a>Logout</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
   </body>
