--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -4,7 +4,7 @@
     <ul class="row list-unstyled">
       <% for(var i=0; i<recipes.length; i++) {%>
       <li class="col-6 justify-content-between mt-5">
-        <a href="/post/<%= recipes[i]._id%>">
+        <a href="/recipe/<%= recipes[i]._id%>">
           <h3><%= recipes[i].name%></h3>
           <span><%= recipes[i].ingredients%></span>
           <img class="img-fluid" src="<%= recipes[i].image%>">
@@ -36,9 +36,9 @@
       <% for(var i=0; i<recipes.length; i++) {%>
 
       <!-- card -->
-      <div class="bg-white rounded-md overflow-hidden relative shadow-md">
-        <div>
-          <img class="w-full" src="<%= recipes[i].image %>" alt="Recipe Title">
+      <div class="bg-white rounded-md overflow-hidden relative shadow-md rounded-lg">
+        <div className="flex flex-column">
+          <img class="w-full h-48 object-cover rounded-lg shadow" src="<%= recipes[i].image %>" alt="Recipe Title">
         </div>
         <div class="p-4">
           <h2 class="text-2xl text-green-400"><%= recipes[i].name %></h2>
@@ -64,7 +64,9 @@
             </div>
           </div>
           <p class="mb-4 text-gray-500">A recipe that's quick and easy to make and super tasty!</p>
-          <button class="text-white bg-green-400 p-4 rounded-md w-full uppercase">View Recipe</button>
+          <a href="/recipe/<%= recipes[i]._id%>">
+            <button class="text-white bg-green-400 p-4 rounded-md w-full uppercase">View Recipe</button>
+          </a>
         </div>
         <div class="absolute top-0 right-0 mt-4 mr-4 bg-green-400 text-white rounded-full pt-1 pb-1 pl-4 pr-5 text-xs uppercase">
           <span>Medium</span>
