--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -24,9 +24,9 @@
   <!-- main container -->
   <div class="container mx-auto p-4">
 
-    <h1 class="text-center text-4xl">Tailwind CSS - Recipe Cards</h1>
+    <h1 class="text-center text-4xl">Chef's Kiss - Recipe Cards</h1>
     <p class="text-center text-gray-800 mb-8">
-      Built by <a class="underline hover:no-underline" href="http://www.scottturner.co.uk" target="_blank">Scott Turner</a>
+      100Devs Food Network
     </p>
 
     <!-- recipe card grid-->
