--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,6 +15,22 @@
                   <input type="text" class="form-control" id="name" name="name">
               </div>
               <div class="mb-3">
+                <label for="difficulty" class="form-label">Difficulty</label>
+                <textarea class="form-control" id="difficulty" name="difficulty"></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea class="form-control" id="description" name="description"></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="timeRange" class="form-label">Time Range</label>
+                <textarea class="form-control" id="timeRange" name="timeRange"></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="serves" class="form-label">Serves</label>
+                <textarea class="form-control" id="serves" name="serves"></textarea>
+              </div>
+              <div class="mb-3">
                 <label for="ingredients" class="form-label">Ingredients</label>
                 <textarea class="form-control" id="ingredients" name="ingredients"></textarea>
               </div>
