--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,25 +1,7 @@
 <%- include('partials/header') -%>
-<div class="container">
-  <div class="row justify-content-center mt-5">
-    <ul class="row list-unstyled">
-      <% for(var i=0; i<recipes.length; i++) {%>
-      <li class="col-6 justify-content-between mt-5">
-        <a href="/recipe/<%= recipes[i]._id%>">
-          <h3><%= recipes[i].name%></h3>
-          <span><%= recipes[i].ingredients%></span>
-          <img class="img-fluid" src="<%= recipes[i].image%>">
-          <span><%= recipes[i].directions%></span>
-          <!-- TODO some sort of favorites count or likes -->
-        </a>
-      </li>
-      <% } %>
-    </ul>
-  </div>
-</div>
 
-<hr />
 
-<body class="bg-gradient-to-b from-gray-200 to-gray-400 bg-fixed h-full">
+<body class="bg-gradient-to-b from-gray-200 to-gray-500 bg-fixed h-full">
 
   <!-- main container -->
   <div class="container mx-auto p-4">
@@ -41,35 +23,35 @@
           <img class="w-full h-48 object-cover rounded-lg shadow" src="<%= recipes[i].image %>" alt="Recipe Title">
         </div>
         <div class="p-4">
-          <h2 class="text-2xl text-green-400"><%= recipes[i].name %></h2>
+          <h2 class="text-2xl text-blue-500"><%= recipes[i].name %></h2>
           <div class="flex justify-between mt-4 mb-4 text-gray-500">
             <div class="flex items-center">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
               </svg>
-              <span class="ml-1 lg:text-xl">30m</span>
+              <span class="ml-1 lg:text-xl"><%= recipes[i].timeRange %></span>
             </div>
             <div class="flex items-center">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                 <path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z" />
                 <path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z" clip-rule="evenodd" />
               </svg>
-              <span class="ml-1 lg:text-xl">10</span>
+              <span class="ml-1 lg:text-xl">10 Steps PH</span>
             </div>
             <div class="flex items-center">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                 <path d="M9 6a3 3 0 11-6 0 3 3 0 016 0zM17 6a3 3 0 11-6 0 3 3 0 016 0zM12.93 17c.046-.327.07-.66.07-1a6.97 6.97 0 00-1.5-4.33A5 5 0 0119 16v1h-6.07zM6 11a5 5 0 015 5v1H1v-1a5 5 0 015-5z" />
               </svg>
-              <span class="ml-1 lg:text-xl">1-2</span>
+              <span class="ml-1 lg:text-xl">1-2 PH || <%= recipes[i].serves %></span>
             </div>
           </div>
-          <p class="mb-4 text-gray-500">A recipe that's quick and easy to make and super tasty!</p>
+          <p class="mb-4 text-gray-500"><%= recipes[i].description %></p>
           <a href="/recipe/<%= recipes[i]._id%>">
-            <button class="text-white bg-green-400 p-4 rounded-md w-full uppercase">View Recipe</button>
+            <button class="text-white bg-blue-500 p-4 rounded-md w-full uppercase">View Recipe</button>
           </a>
         </div>
-        <div class="absolute top-0 right-0 mt-4 mr-4 bg-green-400 text-white rounded-full pt-1 pb-1 pl-4 pr-5 text-xs uppercase">
-          <span>Medium</span>
+        <div class="absolute top-0 right-0 mt-4 mr-4 bg-blue-500 text-white rounded-full pt-1 pb-1 pl-4 pr-5 text-xs uppercase">
+          <span><%= recipes[i].difficulty %></span>
         </div>
       </div>
       <!-- LOOP END -->
