--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -55,7 +55,7 @@
                 class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52"
               >
                 <li>
-                  <a class="justify-between">
+                  <a href="/profile" class="justify-between">
                     Profile
                     <span class="badge">New</span>
                   </a>
