--- a/public/css/output.css
+++ b/public/css/output.css
@@ -3033,6 +3033,14 @@ html {
   margin-top: 0.75rem;
 }
 
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -3184,6 +3192,10 @@ html {
   --tw-gradient-to: #6b7280;
 }
 
+.to-white {
+  --tw-gradient-to: #fff;
+}
+
 .bg-fixed {
   background-attachment: fixed;
 }
@@ -3250,12 +3262,20 @@ html {
   font-weight: 700;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
 
 .normal-case {
   text-transform: none;
+}
+
+.leading-tight {
+  line-height: 1.25;
 }
 
 .text-gray-800 {
@@ -3291,6 +3311,19 @@ html {
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.opacity-50 {
+  opacity: 0.5;
+}
+
+.opacity-70 {
+  opacity: 0.7;
 }
 
 .shadow-md {
