--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,14 +1,14 @@
 <%- include('partials/header') -%>
 
 
-<body class="bg-gradient-to-b from-gray-200 to-gray-500 bg-fixed h-full">
+<body class="bg-gradient-to-b from-gray-200 to-white bg-fixed h-full">
 
   <!-- main container -->
   <div class="container mx-auto p-4">
+    <h2 class="text-center font-medium leading-tight text-4xl mt-0 mb-2 text-blue-600">Chef's Kiss - Recipe Cards</h2>
+    <p class="text-center mt-0 mb-8 text-blue-600 opacity-70">100Devs Food Network</p>
 
-    <h1 class="text-center text-4xl">Chef's Kiss - Recipe Cards</h1>
-    <p class="text-center text-gray-800 mb-8">
-      100Devs Food Network
+
     </p>
 
     <!-- recipe card grid-->
