--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -40,7 +40,7 @@
       <p><%= recipe.ingredients %></p>
       <p><%= recipe.directions %></p>
     </div>
-    <div class="col-12 mt-5 text-center">
+    <div class="col-12 m-4 text-center">
       <a class="btn btn-primary" href="/profile">Return to Profile</a>
       <a class="btn btn-primary" href="/feed">Return to Feed</a>
     </div>
