--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -1,9 +1,9 @@
 <%- include('partials/header') -%>
 <div class="container">
-  <div class="row justify-content-center mt-5">
+  <div class="row justify-content-center mt-5 text-center">
     <div class="col-12">
       <h2><%= recipe.name %></h2>
-      <img class="img-fluid" src="<%= recipe.image%>" />
+      <img class="img-fluid mx-auto" src="<%= recipe.image%>" />
       <div class="row justify-content-between">
         <form
           class="col-1"
