--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -4,9 +4,9 @@
     <div class="col-12">
       <h2><%= recipe.name %></h2>
       <img class="img-fluid mx-auto" src="<%= recipe.image%>" />
-      <div class="row justify-content-between">
+      <div class="row justify-content-center">
         <form
-          class="col-1"
+          class="col-1 m-2 p-0"
           action="/recipe/likeRecipe/<%= recipe.id %>?_method=PUT"
           method="POST"
         >
@@ -14,7 +14,7 @@
         </form>
         <!-- TODO -->
         <form
-          class="col-1"
+          class="col-1 m-2 p-0"
           action="/recipe/favoriteRecipe/<%= recipe.id %>"
           method="POST"
         >
@@ -25,7 +25,7 @@
         <form
           action="/recipe/deleteRecipe/<%= recipe.id %>?_method=DELETE"
           method="POST"
-          class="col-3"
+          class="col-1 m-2 p-0"
         >
           <button class="btn btn-primary fa fa-trash" type="submit"></button>
         </form>
