--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -13,7 +13,7 @@
     <h2><%= user.userName %> has <%= left %> things left to do.</h2>
 
     <form action="/todos/createTodo" method='POST'>
-        <input type="text" placeholder="Enter Todo Item" name='todoItem'>
+        <input type="text" placeholder="Enter Todo Item" name='todoItem' required>
         <input type="submit">
     </form>
 
